<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">


        <TextView
            android:id="@+id/goal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/cabin"
            android:text="@string/daily_goal_setting_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/minutePicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_title" />

        <NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hourPicker"
            app:layout_constraintTop_toBottomOf="@+id/goal_title" />


        <TextView
            android:id="@+id/hour_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/hour"
            app:layout_constraintEnd_toEndOf="@+id/hourPicker"
            app:layout_constraintStart_toStartOf="@+id/hourPicker"
            app:layout_constraintTop_toBottomOf="@+id/hourPicker" />

        <TextView
            android:id="@+id/minutes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/minutes"
            app:layout_constraintEnd_toEndOf="@+id/minutePicker"
            app:layout_constraintStart_toStartOf="@+id/minutePicker"
            app:layout_constraintTop_toBottomOf="@+id/minutePicker" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_goal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minutes_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>