<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/goal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/cabin"
            android:text="@string/pick_up_goal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <NumberPicker
            android:id="@+id/pick_up_picker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_title" />

        <TextView
            android:id="@+id/pick_up_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/pick_up_times"
            app:layout_constraintEnd_toEndOf="@+id/pick_up_picker"
            app:layout_constraintStart_toStartOf="@+id/pick_up_picker"
            app:layout_constraintTop_toBottomOf="@+id/pick_up_picker" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/set_goal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_up_times" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>