<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.timesculptor.welcome.Intro3ViewModel" />

    </data>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222627">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/asdf"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/permission_intro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/cabin"
                android:text="@string/Intro_permission"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/permission1"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#5900080A"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permission_intro">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/permission1_constrain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/data_permission_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/access_permission"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/usage_checkbox"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/uncheck_circle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/data_access_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usage_access"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/cabin"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/data_permission_icon"
                        app:layout_constraintTop_toTopOf="@+id/data_permission_icon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/usage_permission"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/data_access_title" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/permission2"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="#5900080A"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permission1">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/overlay_permission_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/overlay_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/overlay_checkbox"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/uncheck_circle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/overlay_permission_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overlay_permission"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/cabin"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/overlay_permission_icon"
                        app:layout_constraintTop_toTopOf="@+id/overlay_permission_icon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/overlay_permission_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/overlay_permission_title" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/permission3"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="#5900080A"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permission2">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/notification_permission_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/notification"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/notification_checkbox"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/uncheck_circle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/notification_permission_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_permission"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/cabin"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/notification_permission_icon"
                        app:layout_constraintTop_toTopOf="@+id/notification_permission_icon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/notification_permission_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/notification_permission_title"
                        app:layout_constraintBottom_toBottomOf="parent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/go"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/permission3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:text="@string/get_started"
                android:layout_marginEnd="16dp">

            </androidx.appcompat.widget.AppCompatButton>

            <View
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/go"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>